<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MarinedbActivity!</string>
    <string name="app_name">海相系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_single">单         选</string>
    <string name="btn_mutiple">多         选</string>
    <string name="btn_frame">框         选</string>
    <string name="btn_line">折         线</string>
    <string name="btn_polygon">多   边  形</string>
    <string name="btn_cur_screen">屏幕范围</string>
    <string name="btn_cancel_chooise">取消选择</string>
    
    <string name="btn_tool">工具</string>
    <string name="btn_search">查询</string>
    <string name="btn_count">统计</string>
    <string name="btn_compare">对比</string>
    <string name="btn_mine">我的</string>
    <string name="btn_layout">图层</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_document">文档</string>
    <string name="btn_attribute">属性</string>
    <string name="btn_introduce">简介</string>

    
    <string name="btn_tool_title">工具子菜单项</string>
    <string name="btn_tool_title_count">统计子菜单项</string>
    <string name="btn_tool_title_compare">对比子菜单项</string>
    <string name="btn_tool_title_mine">我的子菜单项</string>

    
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_or_no">是否退出登陆？</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="set_cur_screen">设置为当前图层</string>
    <string name="geocode_url">http://sampleserver3.arcgisonline.com/ArcGIS/rest/services/Petroleum/KSPetro/MapServer/1</string>
    <string name="search">搜索</string>

    
    <string name="layer_name">图层名称</string>
    <string name="layer_show">是否显示</string>
    <string name="layer_current">设为当前图层</string>
    <string name="search_loading">正在查询...</string>
    <string name="search_no_result">抱歉，没有结果</string>
    <string name="search_no_data">暂时没有数据</string>
    <string name="tip_no_objects">您还未选择对比目标</string>
    <string name="clear_history">清空搜索历史记录</string>
    <string name="user_cancel_search">您已取消本次查询</string>
    <string name="stored_ok">已收藏</string>
    <string name="stored_no">已取消收藏</string>
    
    <string name="need_login">您未登陆，请先登陆</string>
    
    <string name="user_login_title">登陆</string>
    <string name="user_login_dialog_ok">确定</string>
    <string name="user_login_dialog_cancel">取消</string>
    <string name="user_login_username">用户名</string>
    <string name="user_login_userpwd">密码</string>
    <string name="user_login_username_hint">请填写用户名</string>
    <string name="user_login_userpwd_hint">请填写密码</string>
    
    <!--  油藏 202.204.193.201:6080-->
   <!--  <string name="url_oilreservoirs">http://10.225.14.204/arcgis/rest/services/oilreservoirs/MapServer</string> -->
    <!-- 气藏-->
    <string name="url_gasreservoirs">http://10.225.14.204/arcgis/rest/services/gasreservoirs/MapServer</string>
    <!-- 井-->
    <!-- <string name="url_well">http://10.225.14.204/arcgis/rest/services/well/MapServer</string> -->
     <!-- 油田-->
     <string name="url_oilfields">http://10.225.14.204/arcgis/rest/services/Oil_field/MapServer</string> 
      <!-- 气田-->
     <string name="url_gasfields">http://10.225.14.204/arcgis/rest/services/Gas_field/MapServer</string> 
      <!-- 盆地-->
     <string name="url_basin">http://10.225.14.204/arcgis/rest/services/basin/MapServer</string> 
    
    
     <!-- 油田查询url-->
    <string name="url_oilfields_4search">http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer/8</string>
      <!-- 气田查询url-->
    <string name="url_gasfields_4search">http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer/9</string>
      <!-- 盆地查询url-->

    <string name="url_basin_4search">http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer/10</string>

    <!-- 基础地理 -->
    <string name="url_marine_geo">http://10.225.14.204/arcgis/rest/services/marine_geo/MapServer</string>
    <!-- 卫星图 -->
    <string name="url_marine_image">http://10.225.14.204/arcgis/rest/services/marine_image/MapServer</string>
    <!-- 不显示，也不添加到mapview,搜索用-->
   								  <!-- http://10.225.14.204/arcgis/services/Oil_field/MapServer -->
    <string name="url_marine_oil">http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer</string>
   <!-- 盖层 -->
    <string name="url_cover"> http://10.225.14.204/arcgis/rest/services/cover/MapServer</string> 
   <!-- 烃源岩 -->
   <string name="url_source_rock"> http://10.225.14.204/arcgis/rest/services/source_rock/MapServer</string>
   <!-- 储集层 --> 
   <string name="url_reservoir"> http://10.225.14.204/arcgis/rest/services/reservoir/MapServer</string>
   
    <!-- 盖层 -->
    <string name="url_cover_4search"> http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer/4</string> 
   <!-- 烃源岩 -->
   <string name="url_source_rock_4search">http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer/5</string>
   <!-- 储集层 --> 
   <string name="url_reservoir_4search">http://10.225.14.204/arcgis/rest/services/marine_oil/MapServer/6</string>
    

</resources>
