<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <!-- todo:放mapview -->

        <com.esri.android.map.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.esri.android.map.MapView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <!-- 搜索框和图层按钮 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edittext_search"
                        android:layout_width="1200dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/searchbtn"
                        android:hint="搜索地图"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_search_confirm"
                        style="@style/btn_search_confirm"
                        android:background="@drawable/selector_btn_toolbar"
                        android:layout_marginLeft="2dp"
                        android:text="@string/btn_confirm" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <Button
                        android:id="@+id/btn_map_layout"
                        style="@style/btn_toolbar_btn"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:drawableTop="@drawable/toolbar_single"
                        android:text="@string/btn_layout" />
                </RelativeLayout>
            </LinearLayout>
            <!-- 左边工具栏 -->

            <LinearLayout
                android:id="@+id/tool_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:orientation="vertical"
                android:paddingLeft="5dp" >

                <Button
                    android:id="@+id/tb_single"
                    style="@style/btn_toolbar_btn"
                    android:drawableTop="@drawable/toolbar_single"
                    android:text="@string/btn_single" />

                <Button
                    android:id="@+id/tb_multiple"
                    style="@style/btn_toolbar_btn"
                    android:drawableTop="@drawable/toolbar_mutiple"
                    android:text="@string/btn_mutiple" />

                <Button
                    android:id="@+id/tb_frame"
                    style="@style/btn_toolbar_btn"
                    android:drawableTop="@drawable/toolbar_frame"
                    android:text="@string/btn_frame" />

                <Button
                    android:id="@+id/tb_polygon"
                    style="@style/btn_toolbar_btn"
                    android:drawableTop="@drawable/toolbar_polygon"
                    android:text="@string/btn_polygon" />

                <Button
                    android:id="@+id/tb_line"
                    style="@style/btn_toolbar_btn"
                    android:drawableTop="@drawable/toolbar_line"
                    android:text="@string/btn_line" />

                <Button
                    android:id="@+id/tb_cur_screen"
                    style="@style/btn_toolbar_btn"
                    android:drawableTop="@drawable/toolbar_screen"
                    android:text="@string/btn_cur_screen" />
            </LinearLayout>

            <!-- 放大，缩小 -->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tool_bar"
                android:layout_marginTop="75dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/sxBtn"
                        android:layout_width="66dp"
                        android:layout_height="43dp"
                        android:background="@drawable/btn_in" />

                    <ImageView
                        android:id="@+id/fdBtn"
                        android:layout_width="66dp"
                        android:layout_height="43dp"
                        android:background="@drawable/btn_zoom" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/menu_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <com.sinopec.view.MenuViewTool
                    android:id="@+id/menuview_tool"
                    style="@style/menubar_menuview" />

                <com.sinopec.view.MenuViewCount
                    android:id="@+id/menuview_count"
                    style="@style/menubar_menuview" />

                <com.sinopec.view.MenuViewCompare
                    android:id="@+id/menuview_compare"
                    style="@style/menubar_menuview" />

                <com.sinopec.view.MenuViewMine
                    android:id="@+id/menuview_mine"
                    style="@style/menubar_menuview" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:singleLine="false" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/poiAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@drawable/ballon2" />

</RelativeLayout>